--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: attendance-qr-app
     env: python
     plan: free
-    buildCommand: bash build.sh
+    buildCommand: pip install --upgrade pip && pip install -r requirements.txt && pip install gunicorn==21.2.0 psycopg2-binary==2.9.9
     startCommand: python -m gunicorn app:app --bind 0.0.0.0:$PORT --workers 2 --timeout 120
     envVars:
       - key: FLASK_ENV
